--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,27 @@
 {
+  "ReverseProxy": {
+    "Routes": {
+      "milvus-route": {
+        "ClusterId": "milvus-cluster",
+        "Match": {
+          "Path": "/milvus/{**catch-all}"
+        },"Transforms": [
+          {
+            "PathRemovePrefix": "/milvus"
+          }
+        ]
+      }
+    },
+    "Clusters": {
+      "milvus-cluster": {
+        "Destinations": {
+          "destination1": {
+            "Address": "http://127.0.0.1:19530/"  
+          }
+        }
+      }
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -16,16 +39,28 @@
     "MilvusClientConn": {
       "Host": "localhost",
       "Port": 19530,
-      "Query":"/v2/vectordb/entities/search",
-      "Load":"/v2/vectordb/collections/get_load_state",
       "CollectionName": "images"
+    },
+    "FasterWhisper": {
+      "Path": "D:\\download\\translatesubtitle\\Faster-Whisper-XXL\\faster-whisper-xxl.exe",
+      "Arguments": " {input} -l Japanese -m large-v2  --no_speech_threshold 0.3  --vad_threshold 0.3 --standard  --output_dir source --output_format json --beep_off --skip"
+    },
+    "OpenApi":{
+"Chat": "http://127.0.0.1:8000/v1/chat/completions",
+"MaxTokens": 13000,
+"Request": {
+  "messages": [],
+  "temperature": 0,
+  "model": "/models/8b",
+  "stream": false
+}
     },
     "Socks":"127.0.0.1:10080"
   },
   "Kestrel": {
     "Endpoints": {
       "HTTP": {
-        "Url": "http://*:5000"
+        "Url": "http://localhost:5000"
       }
     }
   },
