--- a/videoprocess.csproj
+++ b/videoprocess.csproj
@@ -7,9 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+   <PackageReference Include="Tokenizers.DotNet" Version="1.2.1" />
     <PackageReference Include="HttpToSocks5Proxy" Version="1.4.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.4" />
-     <PackageReference Include="Milvus.Client" Version="2.3.0-preview.1" />  <PackageReference Include="SixLabors.ImageSharp" Version="3.1.11" /> <PackageReference Include="TorchSharp" Version="0.105.1" /><PackageReference Include="TorchSharp-cuda-windows" Version="0.105.1" /> 
+     <PackageReference Include="Milvus.Client" Version="2.3.0-preview.1" />  <PackageReference Include="SixLabors.ImageSharp" Version="3.1.11" /> <PackageReference Include="TorchSharp" Version="0.105.1" /><PackageReference Include="TorchSharp-cuda-windows" Version="0.105.1" /><PackageReference Include="Yarp.ReverseProxy" Version="2.3.0" /> 
   </ItemGroup>
 
 </Project>
