--- a/appsettings.json
+++ b/appsettings.json
@@ -33,27 +33,24 @@
   },
   "AppConfiguration": {
     "MaxDegreeOfParallelism": 10,
-    "ModelPath": "D:\\download\\ViT-B-16.pt",
-    "FFmpeg": "D:\\download\\translatesubtitle\\Faster-Whisper-XXL\\ffmpeg.exe",
-    "FFprobe": "D:\\download\\LosslessCut-win-x64\\resources\\ffprobe.exe",
+    "ModelPath": "D:\\download\\videoprocess\\resources\\ViT-B-16.pt",
+    "FFmpeg": "D:\\download\\videoprocess\\resources\\ffmpeg\\ffmpeg.exe",
+    "FFprobe": "D:\\download\\videoprocess\\resources\\ffmpeg\\ffprobe.exe",
     "MilvusClientConn": {
       "Host": "localhost",
       "Port": 19530,
       "CollectionName": "images"
     },
     "FasterWhisper": {
-      "Path": "D:\\download\\translatesubtitle\\Faster-Whisper-XXL\\faster-whisper-xxl.exe",
-      "Arguments": " {input} -l Japanese -m large-v2  --no_speech_threshold 0.3  --vad_threshold 0.3 --standard  --output_dir source --output_format json --beep_off --skip"
+      "Path": "D:\\download\\videoprocess\\resources\\Faster-Whisper-XXL\\faster-whisper-xxl.exe",
+      "ModeDir": "C:\\Users\\YongChing\\Downloads\\_models"
     },
     "OpenApi":{
+      "Token":"D:\\download\\videoprocess\\resources\\deepseek_v3_tokenizer",
 "Chat": "http://127.0.0.1:8000/v1/chat/completions",
 "MaxTokens": 13000,
-"Request": {
-  "messages": [],
-  "temperature": 0,
-  "model": "/models/8b",
-  "stream": false
-}
+"Request": "{ \"messages\": [{ \"role\": \"system\", \"content\": \"you are chatgpt\" }], \"temperature\": 0, \"model\": \"/models/8b\", \"stream\": false }"
+
     },
     "Socks":"127.0.0.1:10080"
   },
