--- a/videoprocess.csproj
+++ b/videoprocess.csproj
@@ -12,5 +12,15 @@
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.4" />
      <PackageReference Include="Milvus.Client" Version="2.3.0-preview.1" />  <PackageReference Include="SixLabors.ImageSharp" Version="3.1.11" /> <PackageReference Include="TorchSharp" Version="0.105.1" /><PackageReference Include="TorchSharp-cuda-windows" Version="0.105.1" /><PackageReference Include="Yarp.ReverseProxy" Version="2.3.0" /> 
   </ItemGroup>
-
+ <ItemGroup>
+   <Content Include="hf_tokenizers.dll">
+    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    <CopyToPublishDirectory>Always</CopyToPublishDirectory>
+      </Content>
+        <Content Include="SystemPrompt.txt">
+    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    <CopyToPublishDirectory>Always</CopyToPublishDirectory>
+      </Content>
+  </ItemGroup>
+  
 </Project>
