--- a/videoprocess.csproj
+++ b/videoprocess.csproj
@@ -14,6 +14,10 @@
 
   </ItemGroup>
  <ItemGroup>
+   <Content Include="python\**\*">
+    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    <CopyToPublishDirectory>Always</CopyToPublishDirectory>
+      </Content>
    <Content Include="hf_tokenizers.dll">
     <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     <CopyToPublishDirectory>Always</CopyToPublishDirectory>
