enhance OpenApi configuration to include headers and update chat API endpoint

--- a/appsettings.json
+++ b/appsettings.json
@@ -18,9 +18,12 @@
     },
     "OpenApi":{
       "Token":"D:\\download\\videoprocess\\resources\\deepseek_v3_tokenizer",
-"Chat": "http://127.0.0.1:8000/v1/chat/completions",
+"Chat": "https://integrate.api.nvidia.com/v1/chat/completions",
 "MaxTokens": 10000,
-"Request": "{ \"messages\": [{ \"role\": \"system\", \"content\": \"you are chatgpt\" }], \"temperature\": 0, \"model\": \"/models/8b\", \"stream\": false }"
+"Headers": {
+        "Authorization": "Bearer your_api_key_here"
+},
+"Request": "{ \"messages\": [{ \"role\": \"system\", \"content\": \"you are chatgpt\" }], \"temperature\": 0, \"model\": \"deepseek-ai/deepseek-v3.1\", \"stream\": false, \"chat_template_kwargs\": { \"thinking\": true } }"
 
     }
   },
